# ChangeLog for sys-apps/portage
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*portage-2.2.01.20389 (03 Apr 2012)

  03 Apr 2012; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.20389.ebuild,
  -portage-2.2.01.20239.ebuild:
  Version bump, matches v2.2.0_alpha99+

*portage-2.2.01.20366 (31 Mar 2012)

  31 Mar 2012; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.20366.ebuild,
  -portage-2.2.01.20153.ebuild:
  Version bump, matches 2.2.0_alpha96+

*portage-2.2.01.20271 (01 Mar 2012)

  01 Mar 2012; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.20271.ebuild,
  -portage-2.2.01.20062.ebuild, files/portage-2.2.01.20239-ebuildshell.patch:
  Version bump, matches portage-2.2.0_alpha89+

  29 Feb 2012; Michael Haubenwallner <haubi@gentoo.org>
  portage-2.2.01.20239.ebuild, +files/portage-2.2.01.20239-ebuildshell.patch:
  handle 'ebuildshell' feature like the 'interactive' property in
  stdio-redirection

*portage-2.2.01.20239 (19 Feb 2012)

  19 Feb 2012; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.20239.ebuild,
  -portage-2.2.01.20048.ebuild:
  Version bump, matches portage-2.2.0_alpha87

*portage-2.2.01.20153 (09 Feb 2012)

  09 Feb 2012; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.20153.ebuild,
  -portage-2.2.01.19572.ebuild:
  Version bump, potential fixes for bugs #402413 and #398805.

*portage-2.2.01.20062 (10 Jan 2012)

  10 Jan 2012; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.20062.ebuild,
  -portage-2.2.01.19981.ebuild:
  Version bump to fix bug #397613

*portage-2.2.01.20048 (31 Dec 2011)

  31 Dec 2011; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.20048.ebuild,
  -portage-2.2.01.20043.ebuild:
  Version bump, matches 2.2.0_alpha84, fixes #396577

*portage-2.2.01.20043 (26 Dec 2011)

  26 Dec 2011; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.20043.ebuild,
  -portage-2.2.01.20023.ebuild:
  Version bump, matches portage-2.2.0_alpha83+, fix for Prefix bug #395911
